# TextualLog

./: README.md  pyproject.toml
demo/: demo_file_logger.py  demo_file_loguru.py
src/textual_logger/: __init__.py  __main__.py  app.py  core.py  handler.py  manager.py  models.py  widgets.py
