[project]
name = "textuallog"
version = "0.1.0"
description = "基于 Textual 的终端日志可视化工具"
readme = "README.md"
requires-python = ">=3.11"
authors = [
    {name = "TextualLog开发者"}
]
dependencies = [
    "textual>=0.47.0",
    "psutil>=5.9.0",
    "python-dotenv>=1.0.0",
]
# 添加项目 URL 和许可证信息
urls = {Homepage = "https://github.com/HibernalGlow/TextualLog", Documentation = "https://github.com/HibernalGlow/TextualLog#readme"}
license = {text = "MIT"}
# 添加项目分类，便于在 PyPI 上更好地分类
classifiers = [
    "Development Status :: 4 - Beta",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Environment :: Console",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: System :: Logging",
]


[build-system]
requires = ["setuptools>=61.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[project.scripts]
textual_logger = "textual_logger.__main__:main"  # 更新为使用__main__模块的main函数
tlog = "textual_logger.__main__:main"

[tool.setuptools]
package-dir = {"" = "src"}
packages = ["textual_logger"]

[tool.setuptools.package-data]
"textual_logger" = ["py.typed"]  # 添加类型提示支持

# 添加mypy配置，启用类型检查
[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
disallow_incomplete_defs = false

# 测试相关配置
[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
